--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="pill-4 rotate-45"></div>
          </div>
          <div class="login">
-            <img src="./Animation-Student.gif" alt="Profile" height="90px"/>
+            <img src="./AnimationStudent.gif" alt="Profile" height="90px"/>
             <h3 class="title">Student Login</h3>
             <form method="POST" action="studentlogin.php">
                 <div class="text-input">
