Updated admin login and changed to index

--- a/NotaParent.html
+++ b/NotaParent.html
@@ -230,8 +230,9 @@
         <div class="login">
             <h3 class="title">Login As</h3>
             <div class="options">
-                <a href="./StudentLogin.html"><button>Student</button><br></a>
+                <a href="./index.html"><button>Student</button><br></a>
                 <a href="./TeacherLogin.html"><button>Teacher</button><br></a>
+                <a href="./AdminLogin.html"><button>Admin</button><br></a>
             </div>
         </div>
     </div>
