--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             grid-template-areas: "login";
             box-shadow: 0 0 17px 10px rgb(0 0 0 / 30%);
             border-radius: 20px;
-            background: orange;
+            background: white;
             overflow: hidden;
         }
     
